fix swagger, routes y repuestoController
